# C-LAB

./: .gitignore  CMakeLists.txt  README.md
esercizi-esame-so/: controlla_punteggiatura.c  erase_record_sum.c
esercizi-esame-so/ListExercises/: add_after.c  delete_all.c  ex1.c  pick_odds.c  revert.c
esercizi-esame-so/SO_Exam_Correction/: alloca_array.c  list_erase_larger.c
esercizi-esame-so/Trees/BTrees/: tree-example.c
eserciziT2/: hot-potato-msg.c  hot-potato.c  kids-write-file.c  sum-rand-kids.c
eserciziT2/kids-count-or-die/: count-loop.c  kids-count-or-die.c
esercizi_random/: gestionefile.c  pointers.c
esercizi_slide/: ex-semafori.c  saluta_persone.c  testexeclp.c  waitkiddos.c  write.c
lezioniC/esA1/: A1.c
lezioniC/esA2/: A2.c
lezioniC/esA3/: A3.c
lezioniC/esA4/: A4.c
lezioniC/esA5/: a5.c  defs_macros.h
lezioniC/esA9/: address.c  address.h  cl_list.h  client.c  client.h  list_cl.c  list_cl.h  list_of_clients.c
lezioniC/prog1C/: Es2.c  Mercato.c  circonferenza.c  media.c
unix/PIPE/: filter  filter.c  main_pipe  main_pipe.c
unix/PIPE/main_pipe.dSYM/Contents/: Info.plist
unix/PIPE/main_pipe.dSYM/Contents/Resources/DWARF/: main_pipe
unix/PIPE/main_pipe.dSYM/Contents/Resources/Relocations/aarch64/: main_pipe.yml
unix/lez2/: lavagna.c  odd-and-even.c  testOrdinaArray.c
unix/lez2/lavagna.dSYM/Contents/: Info.plist
unix/lez2/lavagna.dSYM/Contents/Resources/DWARF/: lavagna
unix/lez2/lavagna.dSYM/Contents/Resources/Relocations/aarch64/: lavagna.yml
unix/lez3/: es1.c
unix/lez4/: creaproc  creaproc.c
