cmake_minimum_required(VERSION 3.22)
project(C_Lab C)

set(CMAKE_C_STANDARD 11)

add_executable(A5 lezioniC/esA5/A5.c)
add_executable(A1 lezioniC/esA1/A1.c)
add_executable(A2 lezioniC/esA2/A2.c)
add_executable(A3 lezioniC/esA3/A3.c)
add_executable(A4 lezioniC/esA4/A4.c)
add_executable(A9 lezioniC/esA9/list_cl.c lezioniC/esA9/address.c lezioniC/esA9/cl_list.h lezioniC/esA9/list_of_clients.c lezioniC/esA9/list_cl.h lezioniC/esA9/address.h lezioniC/esA9/client.c lezioniC/esA9/client.h)
add_executable(lavagna unix/lez2/lavagna.c)
add_executable(odd-and-even unix/lez2/odd-and-even.c)
add_executable(testOrdinaArray unix/lez2/testOrdinaArray.c)
add_executable(es1 unix/lez3/es1.c)
add_executable(creaproc unix/lez4/creaproc.c)
add_executable(main_pipe unix/PIPE/main_pipe.c)
add_executable(filter unix/PIPE/filter.c)
